--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "gilded-rose",
   "version": "1.0.0",
   "description": "Gilded Rose Kata",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "tsx ./index.ts",
+    "test": "vitest",
+    "pretty": "prettier *.ts --write"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prettier": "^3.3.3",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4"
+  }
 }
