allow running project

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gilded Rose Kata",
   "main": "index.ts",
   "scripts": {
-    "run": "tsx ./index.ts",
+    "shop": "tsx ./index.ts",
     "test": "vitest",
     "pretty": "prettier *.ts --write"
   },
